tests/codegen/errors/reader/typeclass-data-layout/atom.reader.error.reader.data.missing.constructor/reader-data-missing-constructor.mon
;; TEST-ID: tests.codegen.reader-error.reader-data-missing-constructor
;; TEST-TIER: known-fail
;; TEST-STATUS: quarantined-baseline-2026-06-15
;; TEST-KNOWN-FAILURE: expected-fail-compiled
;; TEST-SECTION: codegen
;; TEST-CATEGORY: 90-diagnostics
;; TEST-SUBSET: reader-errors/typeclass-data-layout
;; TEST-CONTEXT: monadc.context.language.codegen-branch-coverage, monadc.context.language.codegen-atom-web, monadc.context.language.reader-error-coverage
;; TEST-PURPOSE: Trigger and pin diagnostic: Expected constructor name in ‘data Maybe’
;; TEST-ATOM: atom.reader.error.reader.data.missing.constructor
;; TEST-CODEGEN-ATOM: atom.reader.error.reader.data.missing.constructor
;; TEST-QUALITY: diagnostic-branch-regression
;; TEST-EXPECT: fail:compile
;; TEST-READER-ERROR: Expected constructor name in ‘data Maybe’
;; TEST-READER-PATH: reader.c:4934 parser.data
;; TEST-CODEGEN-PATH: diagnostic.parser.data
;; TEST-TAG: fail
;; TEST-TAG: diagnostic
;; TEST-TAG: reader
;; TEST-COVERAGE: reader.c:4934 Expected constructor name in ‘data Maybe’
;; TEST-USES-ATOM: atom.reader.error.reader.data.missing.constructor
;; TEST-USES-ATOM: atom.codegen.category.90.diagnostics
;; TEST-USES-ATOM: atom.reader.error
;; TEST-USES-ATOM: atom.reader.error.family.parser.data
;; TEST-REFINES: atom.codegen.category.90.diagnostics
;; TEST-REFINES: atom.reader.error
;; TEST-MENU: errors/reader/typeclass-data-layout/atom.reader.error.reader.data.missing.constructor
;; TEST-MENU-PATH: codegen/errors/reader/typeclass-data-layout/atom.reader.error.reader.data.missing.constructor
;; TEST-ATOM-LEAF: atom.reader.error.reader.data.missing.constructor
;; TEST-CLI-TARGET: codegen errors reader typeclass-data-layout

(module Main)
(data Maybe | Just Int)
